fixed alignment issue on small window size, able to toggle the sidebar

--- a/src/pages/Project/ProjectWrapper.css
+++ b/src/pages/Project/ProjectWrapper.css
@@ -1,15 +1,25 @@
 .project-page {
-    display: grid;
-    grid-template-columns: 10%;
-}
-
-.content-container {
-    grid-column-start: 2;
-    grid-row-start: 1;
+    text-align: initial;
 }
 
 .sidebar {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
+    display: inline-block;
+    transition: width 0.5s;
+    width: 0px;
+}
+
+.sidebar.expand {
+    width: 200px;
+}
+
+.togglebutton {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+}
+
+.content-container {
+    display: inline-block;
+    text-align: center;
+    margin-left: 20px;
 }
